--- a/index.html
+++ b/index.html
@@ -1,27 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Balatongyörök kilátói</title>
+    <title>Balatongyörök killátó</title>
     <link rel="stylesheet" href="./balatongyorok.css">
 </head>
+
 <body>
-    <div class="I">
-        <section> 
-           <header>
-           <h1>Balatongyörök kilátói</h1> 
-             
-        </header>
-          
-            <article>
-                <h2>Batsányi kilátó </h2>
-            </article>
-            <article>
-                <h2>Bél Mátyás kilátó</h2>
-            </article>
-        </section>
-</div>
+
+    <header>
+         <header class="fejlec2">
+               <h1>Balatongyöröki kilátó</h1>
+            </header>
+    </header>
+
+    <p id="p">Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.</p>
+
+    <section style="display: inline;">
+        <article>
+          <h2>Batsányi kilátó </h2>
+        <table>
+           <tr>
+            <th colspan="2">
+            A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található
+            a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre.
+            2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált
+            kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül.
+            Vagy a Szépkilátótól induló piros háromszög jelzésen is. </th>
+           </tr>
+           <tr>
+             <th>Szélesség</th>
+            <td>N 46.77717°</td>
+           </tr>
+           <tr>
+            <th>Hosszúság</th>
+            <td>E 17.35715°</td>
+           </tr>
+           <tr>
+            <th>Magasság</th>
+            <td>448 m</td>
+           </tr>
+           <tr>
+            <th>Megye/ország</th>
+            <td>Zala</td> 
+            </tr>
+            <tr>
+            <th>Hegy</th>
+            <td>Pap-hegy</td>
+            </tr>
+        <table>
+
+        <p>Forrás: <a href="hazaimegyek.hu" target="_blank">hazaimegyek.hu</a> </p>
+    </article>
+
+    <article id="right">
+    <h2>Batsányi kilátó </h2>
+    <table>
+       <tr>
+        <th colspan="2">
+        A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található
+        a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre.
+        2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált
+        kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül.
+        Vagy a Szépkilátótól induló piros háromszög jelzésen is. </th>
+       </tr>
+       <tr>
+        <th>Szélesség</th>
+        <td>N 46.77717°</td>
+        </tr>
+        <tr>
+        <th>Hosszúság</th>
+        <td>E 17.35715°</td>
+        </tr>
+        <tr>
+        <th>Magasság</th>
+        <td>448 m</td>
+        </tr>
+         <tr>
+        <th>Megye/ország</th>
+        <td>Zala</td> 
+        </tr>
+        <tr>
+        <th>Hegy</th>
+        <td>Pap-hegy</td>
+        </tr>
+        <table>
+        <p>
+         Forrás: <a href="hazaimegyek.hu" target="_blank">hazaimegyek.hu</a>
+        </p>
+    </article>  
+</section>
+
 </body>
 </html>
