--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,87 +11,74 @@
 
 <body>
 
-    <header>
-         <header class="fejlec2">
-               <h1>Balatongyöröki kilátó</h1>
-            </header>
-    </header>
+<header>
+    <div class="fejlec2"> 
+        <h1>Balatongyöröki kilátó</h1> 
+    </div>
+</header>
 
-    <p id="p">Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.</p>
+        <p id="p">Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.</p>
 
-    <section style="display: inline;">
-        <article>
-          <h2>Batsányi kilátó </h2>
+<section>
+    <article>   
+                    <h2>Batsányi kilátó </h2>
         <table>
-           <tr>
-            <th colspan="2">
-            A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található
-            a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre.
-            2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált
-            kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül.
-            Vagy a Szépkilátótól induló piros háromszög jelzésen is. </th>
-           </tr>
-           <tr>
-             <th>Szélesség</th>
-            <td>N 46.77717°</td>
-           </tr>
-           <tr>
-            <th>Hosszúság</th>
-            <td>E 17.35715°</td>
-           </tr>
-           <tr>
-            <th>Magasság</th>
-            <td>448 m</td>
-           </tr>
-           <tr>
-            <th>Megye/ország</th>
-            <td>Zala</td> 
+            <tr>
+                <th colspan="2", id="FR">A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre. 2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül. Vagy a Szépkilátótól induló piros háromszög jelzésen is.</th>
             </tr>
             <tr>
-            <th>Hegy</th>
-            <td>Pap-hegy</td>
+                <th>Szélesség</th>
+                <td>N 46.77717°</td>
             </tr>
-        <table>
-
-        <p>Forrás: <a href="hazaimegyek.hu" target="_blank">hazaimegyek.hu</a> </p>
+            <tr>
+                <th>Hosszúság</th>
+                <td>E 17.35715°</td>
+            </tr>
+            <tr>
+                <th>Magasság</th>
+                <td>448 m</td>
+            </tr>
+            <tr>
+                <th>Megye/ország</th>
+                <td>Zala</td> 
+            </tr>
+            <tr>
+                <th>Hegy</th>
+                <td>Pap-hegy</td>
+            </tr>
+        </table>
+        <div id="href"> Forrás: <a href="hazaielmenyek.hu" target="_blank">hazaimelmenyek.hu</a></div>
     </article>
 
-    <article id="right">
-    <h2>Batsányi kilátó </h2>
-    <table>
-       <tr>
-        <th colspan="2">
-        A Pap-hegy csúcsán, az úgynevezett Boncsostetőn található
-        a kilátó, ahonnan páratlan panoráma nyílik a Balaton-felvidékre.
-        2003-ban a Keszthelyi erdészet rendbe hozta a korábban megrongált
-        kilátót. Megközelíthető a Bélapi pihenőtől vagy a Szépkilátótól a Szerelemdombon keresztül.
-        Vagy a Szépkilátótól induló piros háromszög jelzésen is. </th>
-       </tr>
-       <tr>
-        <th>Szélesség</th>
-        <td>N 46.77717°</td>
-        </tr>
-        <tr>
-        <th>Hosszúság</th>
-        <td>E 17.35715°</td>
-        </tr>
-        <tr>
-        <th>Magasság</th>
-        <td>448 m</td>
-        </tr>
-         <tr>
-        <th>Megye/ország</th>
-        <td>Zala</td> 
-        </tr>
-        <tr>
-        <th>Hegy</th>
-        <td>Pap-hegy</td>
-        </tr>
+    <article class="TBII">
+                        <h2>Bél Mátyás kilátó</h2>
         <table>
-        <p>
-         Forrás: <a href="hazaimegyek.hu" target="_blank">hazaimegyek.hu</a>
-        </p>
-    </article>  
+            <tr>
+                <th colspan="2", id="FR">A Garga-hegy tetején található kilátó 1972-ben épült, a keszthelyi erdészet építette. A kilátó kitűnő panorámát nyújt a Tapolcai-medence tanúhegyeire. Ugyancsak kiváló a kilátás a Keszthelyi hegység dimbes-dombos hegyvonulataira, a somogyi partokra, a keszthelyi öbölre. A Keszthelyi-hegység fái között található kilátó környékén egyedi növény-és állatvilág található. </th>
+            </tr>
+            <tr>
+                <th>Szélesség</th>
+                <td>N 46.76855°</td>
+            </tr>
+            <tr>
+                <th>Hosszúság</th>
+                <td>E 17.35227°</td>
+            </tr>
+            <tr>
+                <th>Magasság</th>
+                <td>221 m</td>
+            </tr>
+            <tr>
+                <th>Megye/ország</th>
+                <td>Zala</td> 
+            </tr>
+            <tr>
+                <th>Hegy</th>
+                <td>Gara-hegy</td>
+            </tr>
+        </table>   
+        <div id="href"> Forrás: <a href="hazaielmenyek.hu" target="_blank">hazaielmenyek.hu</a></div>
+    </article> 
 </section>
 
 </body>
