--- a/03. Projekt/Snoezelen/projekt.html
+++ b/03. Projekt/Snoezelen/projekt.html
@@ -17,6 +17,7 @@
             <td><a href="Mmenu"></a> Menü</td>
             <td><a href="./projektI.html">Teremrend</a> </td>
             <td><a href="./ProjektIII.html">Órarend</a></td>
+            <td><a href="./ProjektVI.html">Kérdőív</a></td>
         </tr>
     </table>
 <br><hr>
