--- a/03. Projekt/Snoezelen/projektI.html
+++ b/03. Projekt/Snoezelen/projektI.html
@@ -18,6 +18,7 @@
             <td><a href="./projekt.html">Menü</a> </td>
             <td>Teremrend</td>
             <td><a href="./ProjektIII.html">Órarend</a></td>
+            <td><a href="./ProjektVI.html">Kérdőív</a></td>
         </tr>
     </table>
     <br><hr>
