--- a/01. Órák/Tranzíciók.htm
+++ b/01. Órák/Tranzíciók.htm
@@ -11,8 +11,8 @@
 
 <body class="keret">
     <header>
-        <h1>Tranzíciók</h1>
-        <div> Egyszerű tranzíciók különböző elemeken. Vigye a kurzort a képek vagy a szöveg felé és nézze össze az alatta lévő css kóddal.</div>
+        <h1>Tranzíciók</h1><br>
+        <p style="clear: left; width:90% ; height: 100%; text-align: center;"> Egyszerű tranzíciók különböző elemeken. Vigye a kurzort a képek vagy a szöveg felé és nézze össze az alatta lévő css kóddal.</p>
     </header><br>
     <section>
         <h3>Kép tranzíciók</h3>
