--- a/01. Órák/Tranzíciók.htm
+++ b/01. Órák/Tranzíciók.htm
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./tranziciok.css">
-    <title>Tranzíciók</title>
+    <title>Tranzíciók és transzormációk</title>
 </head>
 
 <body class="keret">
     <header>
-        <h1>Tranzíciók</h1><br>
-        <p style="clear: left; width:90% ; height: 100%; text-align: center;"> Egyszerű tranzíciók különböző elemeken. Vigye a kurzort a képek vagy a szöveg felé és nézze össze az alatta lévő css kóddal.</p>
+        <h1>Tranzíciók és transzormációk</h1><br>
+         <p style="clear: left; width:90% ; height: 100%; text-align: center; margin-left: 0%;"> Egyszerű tranzíciók és transzormálás különböző elemeken. Vigye a kurzort a képek vagy a szöveg felé és nézze össze az alatta lévő css kóddal.</p>
     </header><br>
     <section>
         <h3>Kép tranzíciók</h3>
@@ -132,28 +132,28 @@
      <div class="bal">
          <h2>Színezés</h2>
             <div id="svga">
-                <svg width="110" height="100" style="float: left;"> <circle cx=80 cy=70 r=30  /> </svg>
+                <svg width="110" height="100" style="float: left;"> <circle cx=40 cy=60 r=30  /> </svg>
             </div> <p style="float: left; margin-left: 30px;">#svga {transition: fill 2s;}#svga:hover {fill:  red;}</p>
     </div>
 
     <div class="bal">
         <h2>Áttűnés I.</h2>
            <div id="svgb">
-            <svg width="110" height="100" style="float: left;"> <circle cx=80 cy=70 r=30  /> </svg>
+            <svg width="110" height="100" style="float: left;"> <circle cx=40 cy=60 r=30  /> </svg>
            </div><p style="float: left; margin-left: 30px;">#svgb {transition: fill 2s;}#svga:hover {fill:  red;}</p>
    </div>
 
     <div class="bal">
         <h2>Áttűnés II.</h2>
            <div id="svgc">
-            <svg width="110" height="100" style="float: left;"> <circle cx=80 cy=70 r=30  /> </svg>
+            <svg width="110" height="100" style="float: left;"> <circle cx=40 cy=60 r=30  /> </svg>
            </div><p style="float: left; margin-left: 30px;">#svgc {transition: transform 2s;}#svga:hover {fill:  red;}</p> 
     </div>
 
     <div class="bal">
         <h2>Eltűnés</h2>
            <div id="svgd">
-            <svg width="110" height="100" style="float: left;"> <circle cx=80 cy=70 r=30  /> </svg>
+            <svg width="110" height="100" style="float: left;"> <circle cx=40 cy=60 r=30  /> </svg>
            </div><p style="float: left; margin-left: 30px;">#svgd {transition: fill 2s;}#svga:hover {fill:rgba(255, 0, 0, 0);}</p>
     </div>
 
@@ -161,12 +161,12 @@
 </section>
 <div style="clear: both;">
 <br></div>
-<footer>
+ <footer>
 
-    <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">További példák a w3schools oldalán! </a> <a href="https://angrytools.com/css-generator/transform/">Illetve itt érhető el egy átfogó formázó generátor!</a>     
+  <a href="https://www.w3schools.com/css/css3_transitions.asp" target="_blank">További példák a w3schools oldalán! </a> <a href="https://angrytools.com/css-generator/transform/">Illetve itt érhető el egy átfogó formázó generátor!</a>     
      
 
-    </footer>
+    </footer> 
 
 </body>
 
