--- a/03. Projekt/Snoezelen/projekt.html
+++ b/03. Projekt/Snoezelen/projekt.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="./projekt.css">
 </head>
 <body>
+   
+    
+
+<div id="img">
+    <img src="./Media/g.png" alt="">
     <h2 id="Mmenu">Snoezelen terápiás szoba</h2>
+
+</div>
 
    <div class="TB">
         
