--- a/03. Projekt/Snoezelen/projektIV.html
+++ b/03. Projekt/Snoezelen/projektIV.html
@@ -10,16 +10,16 @@
 <body>
     <h2 id="Mmenu">Snoezelen terápiás szoba</h2>
 
-    <table class="TB">
-        <tr>
-            <td>Eszköztámogatás</td>
-            <td><a href="./ProjectV.html">Galléria</a></td>
-            <td><a href="./projekt.html">Menü</a> </td>
-            <td><a href="./projektI.html">Teremrend</a> </td>
-            <td><a href="./ProjektIII.html">Órarend</a></td>
-            <td><a href="./ProjektVI.html">Kérdőív</a></td>
-        </tr>
-    </table>
+    <div class="TB">
+        
+        <a href="./projektIV.html">Eszköztámogatás</a>
+        <a href="./ProjectV.html">Galléria</a>
+        <a href="./projekt.html">Főoldal</a> 
+        <a href="./projektI.html">Teremrend</a> 
+        <a href="./ProjektIII.html">Órarend</a>
+        <a href="./ProjektVI.html">Kérdőív</a>
+    
+</div>
     <br><hr>
 <h1 class="bkV"><b>Eszköztámogatás</b></h1>
 <hr>
