--- a/01. Órák/Tranzíciók.htm
+++ b/01. Órák/Tranzíciók.htm
@@ -21,38 +21,38 @@
 
             <h2 id="p">Eltolás</h2>
                 <div id="eltol">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div> <p>#eltol {transition: transform 1s;} #eltol:hover {transform: translate(50px,0px);}</p>
 
 
             <h2>Eltolás II.</h2>
 
                 <div id="eltolII">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#eltolII {transition: transform 1s;} #eltolII:hover {transform: translate(0px,50px);}</p>
         </div>
         <div class="bal">
 
             <h2>Nyújtás I.</h2>
                 <div id="nyujt">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#nyujt img {transition: transform 2s;} #nyujt img:hover {transform:scale(0.5,1);}</p>
 
             <h2>Nyújtás II.</h2>
                 <div id="nyujtII">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#nyujtII img {transition: transform 2s;} #nyujtII img:hover {transform:scale(1,0.5);}</p>
         </div>
         <div class="bal">
 
             <h2>Nagyítás</h2>
                 <div id="bigger">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#bigger img {transition: transform 2s;} #bigger img:hover {transform:scale(2.2);}</p>
 
             <h2>Kicsinyítés</h2>
                 <div id="smaller">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#smaller img {transition: transform 2s;} #smaller img:hover {transform:scale(0.5,0.5);}</p>
 
         </div>
@@ -60,12 +60,12 @@
 
             <h2>Döntés I.</h2>
                 <div id="dont">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#dont img {transition: transform 2s;}#dont img:hover {transform:skew(0deg, 90deg);}</p>
 
             <h2>Döntés II.</h2>
                 <div id="dontII">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#dontII img {transition: transform 2s;}#dontII img:hover {transform:skew(90deg, 0deg);}</p>
         
         </div>
@@ -73,12 +73,12 @@
 
             <h2>Forgatás I.</h2>
                 <div id="forgat">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
                 </div><p>#forgat img {transition: transform 2s;}#forgat img:hover {transform:rotate(360deg);}</p>
 
             <h2>Forgatás II.</h2>
                 <div id="forgatII">
-                    <img src="./pngegg (1).png" alt="" width="200px">
+                    <img src="./media/pngegg (1).png" alt="" width="200px">
             </div><p>#forgatII img {transition: transform 2s;} #forgatII img:hover {transform:rotate3d(1, 1, 1, 360deg);}</p>
         </div>
 
