--- a/02. Beadandó/balatongyorok.html
+++ b/02. Beadandó/balatongyorok.html
@@ -12,10 +12,18 @@
         <div class="keret">
             <div class="header">
                  <div class="cimerkep"><img src="cimer.jpg" alt="címer" title="címer"></div>
-             
+                    <div class="bird"><img src="./Media/vecteezy_bird_1203694.png" alt=""></div>
                  <h1>Balatongyörök kilátói</h1>
                
             </div>
+
+                <ul>
+                    <li><a href="index.html">Kezdőoldal</a></li>
+                    <li><a href="hirek.html">Hírek</a></li>
+                    <li><a href="kapcsolat.html">Kapcsolat</a></li>
+                    <li style="float: right;"><a href="rolunk.html">Rólunk</a></li>
+                </ul>
+
             <p class="bekezdes">Balatongyörökön szebbnél-szebb helyszíneken 2 kilátó is várja a turistákat.</p>
   <div class="bal">         
             <h2>Batsányi kilátó </h2>
