--- a/03. Projekt/project_flex.html
+++ b/03. Projekt/project_flex.html
@@ -36,8 +36,8 @@
                             <div id="ti"><div class="textvi">Text</div></div>
                         </div>
                     </section>
-                    <section>  
-                        Árnyékolás animációkkal
+                    <section style="border-radius: 0px;">  
+                        Animált Árnyékolás
                         <div class="cont">
                             <div id="sai"><div class="boxa"></div></div>
                             <div id="saii"><div class="boxa"></div></div>
@@ -59,8 +59,9 @@
                       
                                 <div class="insidecont">
                                  Szövegárnyékok:   <div>A szövegek és szövegrészek – például a span címkével vagy más módon jelöltek – árnyékának létrehozásához a text-shadow stílustulajdonságot kell használnunk - miként az a példaprogramunkban is látható. Ennek a stílustulajdonságnak két paramétert kötelező megadnunk, amelyek mellé még kettő opcionális is beírható.</div>
-                                   Dobozárnyékok <div>Érdekes módon, amíg a szövegárnyék már a CSS2-nek része volt, addig a blokkszintű elemek árnyékkal történő ellátása csak a CSS3-ban kerül(t) bele a „szabványba”. A text-shadow stílustulajdonságokhoz hasonlóan a box-shadow-nál is csak a horizontális és a vertikális eltolást kell megadnunk (amelyek iránya természetesen megegyezik a text-shadow-nál leírtakkal), de ennél már nem kettő, hanem négy opcionális paramétert adhatunk meg.</div>
-                                   Domborítás <div>Klasszikus „domborhatást” érhetünk el azzal az „ezeréves” megoldással, hogy a háttérszínűre festett szövegeknek (29–30. és 35–36. sorok) minimális eltolásokkal és elmosással világosabb és sötétebb árnyékokat adunk (31. és 37. sorok). Ha a világosabb árnyék van felfelé és a sötétebb lefelé, akkor olyan hatású lesz, mintha a szöveg kidomborodna a háttérből, míg a színeket (vagy az eltolásokat) megcserélve belenyomhatjuk a szöveget a háttérbe.</div>
+                                   Dobozárnyékok <div>A text-shadow stílustulajdonságokhoz hasonlóan a box-shadow-nál is csak a horizontális és a vertikális eltolást kell megadnunk
+                                    ,de ennél már nem kettő, hanem négy opcionális paramétert adhatunk meg.</div>
+                                   Domborítás <div>Klasszikus „domborhatást” érhetünk el ha adott háttérszínűre festett szövegeknek (29–30. és 35–36. sorok) minimális eltolásokkal és elmosással világosabb és sötétebb árnyékokat adunk (31. és 37. sorok).</div>
                                 </div> 
                             
                             <div class="insidecont1">Stílus:
