--- a/02. Beadandó/Bevásárlás.html
+++ b/02. Beadandó/Bevásárlás.html
@@ -23,9 +23,7 @@ background-size: cover ;
 background-attachment: fixed;
 
         }
-li { 
-    background-image:radial-gradient(closest-side, #2b282800, #62fa33, #ffffff13)
-}
+
 
 
         td, th {
@@ -33,6 +31,7 @@ li {
            }
         </style>
         <link rel="stylesheet" href="./Bevásárlás.css">
+        <link rel="stylesheet" href="./dist/bev.css">
     </head>
     <body>
          <div id="cim"><h1>NAGYBEVÁSÁRLÁS</h1>
