--- a/02. Beadandó/balatongyorok.html
+++ b/02. Beadandó/balatongyorok.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Balatongyörök kilátói</title>   
 <link rel="stylesheet" type="text/css" href="./balatongyorok.css">
+<link rel="stylesheet" href="./dist/prepp.css">
    
 </head>
     <body>
