--- a/01. Órák/Java és preprocesszorok/JS.html
+++ b/01. Órák/Java és preprocesszorok/JS.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="./JS.css">
+    <link rel="stylesheet" >
     <title>Javascript</title>
+    <style>
+    body{
+       background-image:linear-gradient(0deg, rgba(34,193,195,0) 82%, rgb(34, 104, 255) 97%);
+        }
+    </style>
 
 </head>
 <body>
     
-    <h1>Első JS</h1>
-
+    <h1 style="color:antiquewhite">Első JS</h1>
 
 <script src="./JS.js"></script>
 </body>
 </html>
+
