--- a/01. Órák/Java és preprocesszorok/index.html
+++ b/01. Órák/Java és preprocesszorok/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
 </head>
 <body>
+<p id="elsosor">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed cum architecto libero minus voluptatum reprehenderit aut harum vitae voluptatem. Praesentium enim perferendis animi corporis suscipit quas. Atque magnam repudiandae dolor?</p>
+
+
+
+
+
+
+
+
+<input type="text" name="ertek" id="">
+
+<p id="eredmeny">Kattintson a gombra, hogy kiderüljön a megadott szám 100-e.</p>
+
+<button onclick="szaz()">Nézd meg!</button>
+
+
+
+
+
+
+
+
+
+
+
     <script src="./app.js"></script>
 </body>
 </html>
