--- a/02. Beadandó/haromszog.html
+++ b/02. Beadandó/haromszog.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+    <h1>Háromszög validátor</h1>
+
+    <input type="text" onfocus="myFunction(this)" onblur="myFunction2(this)" name="1.oldal" id="a"> <br>
+    <input type="text" onfocus="myFunction(this)" onblur="myFunction2(this)" name="2.oldal" id="b"> <br>
+    <input type="text" onfocus="myFunction(this)" onblur="myFunction2(this)" name="3.oldal" id="c"> <br>
+    <p id="adatok"></p>
+    <p id="eredmeny"></p>
+
+    <button onclick="haromszog()">Nézd meg!</button>
+
+    <h1 onmouseover="alert1(this)">Ne húzd ide az egeret!</h1>
     <script src="./haromszog.js"></script>
 </body>
 </html>
