--- a/01. Órák/bs.html
+++ b/01. Órák/bs.html
@@ -11,6 +11,91 @@
     <title>Bootstrap oldal</title>
 </head>
 <body>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Home</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Bemutatkozás</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Rólunk</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kapcsolat</a>
+          </li>
+        </ul>
+        <span class="navbar-text">
+          Navbar text with an inline element
+        </span>
+      </div>
+    </div>
+  </nav>
+
+<div class="container-fluid col sm 12 col md 6 col xl 4">
+ 
+  <div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div><div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div><div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div><div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div><div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div><div class="card">
+    <div class="card-header">
+      Featured
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+</div>
+
 <div class="container-fluid"> 
 <h1 class="border rounded-5 border-danger text-center">Bootstrap</h1>
 <!-- <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
@@ -104,15 +189,12 @@
     </div>
   </div>
 <br><hr><br>
-
 <div class="container-fluid
             text-center
             row
             align-items-start
             text-center
-            shadow-lgh" 
-            style="height: 500px;">
-            
+            shadow-lgh" >            
     <div class="col-xl-12 
                 col-lg-12  
                 col-md-3
@@ -121,20 +203,130 @@
                 text-light
                 border border-dark 
                 mt-1 
-                p-5
-                h-25"> 
+                p-1
+                "> 
       Header </div>
-    <div class= "col-xl-3 col-lg-3 col-md-3 col-sm-12 p-5 bg-warning border border-dark mt-1 h-75">
+    <div class= "col-xl-3 col-lg-3 col-md-3 col-sm-12 p-1 bg-warning border border-dark mt-1 ">
       Nav</div>
-    <div class="col-xl-9 col-lg-9 col-md-3 p-1 col-sm-12 p-5 h-50 bs-subtle border border-dark mt-1 h-75 ">
+    <div class="col-xl-9 col-lg-9 col-md-3 p-1 col-sm-12 p-1 h-50 bs-subtle border border-dark mt-1  ">
      Content</div>
-    <div class="col-xl-12 col-lg-12 col-md-3 col-sm-12 bg-info border border-dark p-5 mt-1 h-25 " >
+    <div class="col-xl-12 col-lg-12 col-md-3 col-sm-12 bg-info border border-dark p-1 mt-1 " >
     Footer</div>
+</div>
+<br><br>
 
+</nav>
+<table class="table table-warning table-stripped table-dark table-responsive table table-sm" >
+  <thead>
+    <tr>
+      <th scope="col"></th>
+      <th scope="col"><img src="./Media/pic sample mini.jpg" class="rounded img-thumbnail" alt="..."></th>
+      <th scope="col"><img src="./Media/pic sample mini.jpg" class="rounded img-thumbnail" alt="..."></th>
+      <th scope="col"><img src="./Media/pic sample mini.jpg" class="rounded img-thumbnail" alt="..."></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td><img src="./Media/boat.png" class="rounded img-thumbnail" alt="..."></td>
+      <td><img src="./Media/boat.png" class="img-thumbnail" alt="..."></td>
+      <td><img src="./Media/boat.png" class="rounded img-thumbnail" alt="..."></td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td><img src="./Media/boat.png" class="img-thumbnail img-thumbnail" alt="..."></td>
+      <td><img src="./Media/boat.png" class="rounded img-thumbnail" alt="..."></td>
+      <td><img src="./Media/boat.png" class="img-thumbnail" alt="..."></td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td colspan="2"><img src="./Media/boat.png" class="rounded float-start img-thumbnail" alt="..."></td>
+      <td><img src="./Media/boat.png" class="rounded" alt="..."></td>
+    </tr>
+  </tbody>
+</table>
+<br><br><!--
+<div class="bg-warning text-center align-items ">
+<div class="text-center">
+  <h1>Regisztráció</h1>
+</div>
+<form name="reg" id="reg">
+  <div class=" mb-3 row">
+    <label for="inputPassword" class="col-md-4 col-form-label">E-mail címed:</label>
+    <div class="col-md-4">
+      <input type="email" class="col-md-4 form-control" id="mail">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-md-4 col-form-label">Jelszavad:</label>
+    <div class="col-md-4">
+      <input type="password" class="form-control" id="pass">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-md-4 col-form-label">Születési éved:</label>
+    <div class="col-md-4">
+      <input type="password" class="form-control" id="ev">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-md-4 col-form-label">Jelszavad mégegyszer::</label>
+    <div class="col-md-4">
+      <input type="password" class="form-control" id="pass2">
+    </div>
+  </div>
+  <div class="mb-3 row">
+    <label for="number" class="col-md-4 col-form-label">Lakóhelyed irányítószáma:</label>
+    <div class="col-md-4">
+      <input type="number" class="form-control" id="irs">
+    </div>
+  </div>
+<div class="col-md-4">
+Iskolai végzettséged:
 </div>
 
-<style></style>
+  <div class="form-check container-fluid col-md-4">
+    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+    <label class="form-check-label" for="exampleRadios1">Általános iskola
+    </label>
+</div>
+  <div class="form-check text-center ">
+    <input class="form-check-input text-center" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+    <label class="form-check-label text-center" for="exampleRadios1">
+        Középiskola
+    </label>
+</div>
+
+  <div class="form-check">
+    <input class="form-check-input align-items-center" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+    <label class="form-check-label" for="exampleRadios2">
+      Egyetem
+    </label>
+  </div>
+  <br><br>
+  <div class="mb-3 form-check ">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1" name="confirm">A regisztrációs feltételeket elfogadom</label>
+  </div>
+  <br><br>
+  <button type="submit" class="btn btn-primary " onclick="check()">Regisztráció</button>
+  <button type="submit" class="btn btn-primary">Mezők törlése</button>
+</form>
+</div>
+  -->
+
+
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>    
+<script src="./bs.js"></script>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
