--- a/Zeta/zetaindex.html
+++ b/Zeta/zetaindex.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./zeta.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
     <title>Értékek</title>
 </head>
 
@@ -13,66 +16,107 @@
 
     <header>
       <div class="motto">
-        <svg viewBox="0 0 240 45">
-            <text x="25" y="45" class="elegant">"Adminisztráció menedzsment a fejlesztő nevelő oktatásban"</text>
-            <text x="46" y="35" class="heavy1">É</text>
-            <text x="65" y="35" class="heavy">rtékek</text></svg> 
+        <svg viewBox="0 0 140 20">
+            <text x="14" y="17.5" class="elegant">"Adminisztráció segítő  program és fejlődési térkép</text>
+            <text x="36" y="20" class="elegant">a fejlesztő nevelő oktatásban"</text>
+            <text x="13" y="15" class="heavy1">É</text>
+            <text x="20" y="15" class="heavy">rtékek</text></svg> 
       </div>
       <div class="logo">
-        <svg class="circ1" viewBox="0 0 300 300">
-            <circle cx="150" cy="150" r="119" stroke="black"/></svg>
-        <svg class="circ2" viewBox="0 0 300 300">
-            <circle cx="150" cy="150" r="110" stroke="gold"/></svg>
-        <div class="third_image"></div>
-     </div>
-
+        <svg class="circ1" viewBox="0 0 100 100">
+            <circle cx="50" cy="50" r="30" stroke="black"/></svg>
+          <div class="third_image"></div>  
+        <svg class="circ2" viewBox="0 0 100 100">
+            <circle cx="50" cy="50" r="28" stroke="gold"/></svg>
+      </div>
+      <div class="supporters">
+      <svg class="circs2" viewBox="0 0 100 100">
+        <circle cx="60" cy="28" r="17" stroke="black"/></svg>
+        <div class="logo1_image"></div>
+        <div class="logo2_image"></div>
+        <svg class="circs1" viewBox="0 0 140 100">
+          <text x="1" y="89" class="currentmenu">B</text>
+          <text x="13" y="89" class="currentmenu1">EMUTATKOZÁS</text>
+        <circle cx="28" cy="45" r="28" stroke="black"/></svg>
+      </div>
     </header>
   
     <nav>   
-      <a class="current" href="#home"> <span id="c1">F</span>ŐOLDAL</a> 
-                <div class="dropdown"><span id="c1">V</span>ERZIÓK
-                    <div class="dropdown-content">
-                        <a href="#"><span id="c1">A</span>SZTALI</a>
-                        <a href="#"><span id="c1">O</span>NLINE</a>
-                        <a href="#"><span id="c1">NY</span>OMTATOTT</a>
-                    </div>
-                </div>
-      <a href="#kapcsolat"><span id="c1">R</span>ÓLUNK</a>
-      <a href="#"><span id="c1">K</span>APCSOLAT</a>
-      <a href="#kapcsolat"><span id="c1">T</span>ÁMOGATÓK</a>
+      <div class="mobilmenu"><input class="checkbox" type="checkbox" name="toogle" id="toogle" />
+      <div class="hamburger"></div>
+      <div class="mobildropdown">
+        <div class="mobildropdown-content">
+            <a class="current" href="#home"> <span id="c1">B</span>EMUTATKOZÁS</a> 
+            <a href="#kapcsolat"><span id="c1">R</span>ÓLUNK</a>
+            <a href="#"><span id="c1">K</span>APCSOLAT</a>
+            <a href="#kapcsolat"><span id="c1">T</span>ÁMOGATÓINK</a>
+                        <div class="dropdown"><span id="c1">V</span>ERZIÓINK
+                  <div class="dropdown-content">
+                        <a href="#"><span id="c1">A</span>SZTALI VERZIÓ</a>
+                        <a href="#"><span id="c1">O</span>NLINE VERZIÓ</a>
+                        <a href="#"><span id="c1">NY</span>OMTATOTT VERZIÓ</a>
+                  </div>
+                        </div>
+          </div>
+        </div>
+      </div>
     </nav>
 
-    <section>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-      Eos expedita voluptatibus id reiciendis, ex eius, praesentium sed nulla
-       voluptate deleniti nisi animi quasi dolor. Laboriosam, architecto mollitia.
-        Fugit, amet eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Eligendi sit quod deleniti commodi ratione, aut placeat omnis! Corporis eos 
-        veniam perferendis quidem ipsa, ullam, repellat, labore modi eligendi quis 
-        laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Magni deserunt dolore voluptatum quos mollitia sint aspernatur illo
-         exercitationem itaque ea dolorem nihil modi nostrum eveniet eos amet vero, 
-         libero sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, 
-         dignissimos, rerum mollitia deserunt optio tenetur numquam, id praesentium aliquid 
-         exercitationem quod.
-          Doloribus recusandae officiis amet modi aperiam explicabo culpa magnam?
-          Eos expedita voluptatibus id reiciendis, ex eius, praesentium sed nulla
-          voluptate deleniti nisi animi quasi dolor. Laboriosam, architecto mollitia.
-           Fugit, amet eius. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-           Eligendi sit quod deleniti commodi ratione, aut placeat omnis! Corporis eos 
-           veniam perferendis quidem ipsa, ullam, repellat, labore modi eligendi quis 
-           laboriosam. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-           Magni deserunt dolore voluptatum quos mollitia sint aspernatur illo
-            exercitationem itaque ea dolorem nihil modi nostrum eveniet eos amet vero, 
-            libero sed. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, 
-            dignissimos, rerum mollitia deserunt optio tenetur numquam, id praesentium aliquid 
-            exercitationem quod.
-             Doloribus recusandae officiis amet modi aperiam explicabo culpa magnam?
+    <section>
+      <div class="szakaszI">
+        <div class="cimke"><span id="c2">M</span><span>ik az értékek?</span> </div>
+          <p>
+          Az Értékek program egy intelligens, beépített automatizációval rendelkező kérdőív és értékelő rendszer. Válassza ki a vizsgált személyre pontosan vagy leginkább illő választ kérdés listáinkból, melyek automatikusan rendszerezve, formázva és nyomtatható formában lesznek elérhetőek az Ön számára. 
+          </p>
+          <img src="./media/Mozgásnevelés.png" alt="" style="width: 34%;margin: 0% 16% 0.8% 10%; padding: 0.1%; border-radius: 0px; border: 1px gold solid;">
+          <img src="./media/Komm és beszéd.png" alt="" style="width: 35%;margin: 0% 10% 1% 15%;padding: 0.1%; border-radius: 0px; border: 1px gold solid;">
+          <img src="./media/ált jell.png" alt=""style="width: 35%;margin: 0% 5% 1% 20%;padding: 0.1%; border-radius: 0px; border: 1px gold solid;">
+          <p>
+          Válasszon a legtöbb intézményben előforduló hét nagy témakörből és azoknak témaköreiből. Az egyes témakörök eredményei és kimutatásai megtekinthetők önállóan, vagy összegyűjtve. A témakörök kérdéseit javasolt sorrendben kitölteni, de amennyiben egy-egy témakört nem tud a vizsgált személyre kitölteni, csak ugorjon a következőre. 
+          </p>  
+        <div class="cimke2"><span id="c3">M</span><span>iért és kiknek ajánjluk?</span> </div>
+          <p> 
+          Az Értékek elsősorban fejlesztő - nevelő tevékenységet végző intézményeknek készült abból a célból, hogy a fejlesztő munkát végző pedagógusok és terapeuták gyorsabban készüljenek el adminisztratív dokumentációjukkal és képet kapjanak a vizsgált személyek állapotáról.
+          A kötelező jellemzések létrehozásán túl, kiváltképp hasznos ha elektronikus úton átküldve, vagy pár oldalban kinyomtatva egy-egy érintett személy teljes képet kaphat egy fejlesztés alatt álló személyről, mindezt egységes formában. Fejlesztési célokat is könnyebb megfogalmazni, ha tételesen fel vannak sorolva a fejlesztendő személy jelenlegi képességei és az új kollegáknak is hasznos ha foglalkozás előtt látják a főbb tulajdonságokat.
+          </p> 
+        <div class="cimke"><span id="c2">H</span><span>asználat</span> </div>
+          <p> 
+          A program használata egyszerű. Ha offline (letölthető) változatot használ csak ki egy adott vizsgálati időszakot (jellemzően félév vagy negyedév) és kattintson kétszer az eldöntendő kérdés melletti üres rubrikára, ezzel jelezvén, hogy az adott kérdés igaz. Online verzióban pedig csak húzza jobbra a csúszkát amennyiben igaz egy adott állítás. Válaszait és értékelésének állapotát nyomon tudja követni a „párhuzamos nézet” gombot megnyomva. Így láthatja értékelésének, vizsgálatának jelenlegi állapotát.
+        </p>
+        <img src="./media/vizsgálat.png" alt="" style="width: 80%;margin: 0% 0% 6% 5%;"class="scshhot"> 
+      </div>
+    
+      <div class="szakaszII">  
+        <div class="cimke"><span id="c2">K</span><span>épesség hálók</span> </div>    
+          <p>
+          A megfelelő válaszok nem csak írásos formában jelennek meg. Minden vizsgált személyre jellemző válasz adott értéket képvisel, mely egy kördiagramm alapú képességhálót rajzol ki önnek. Ezzel nyomon tudja követni, hogy a kiválasztott időszakokban  a témakörökben elért eredmények javultak, stagnáltak vagy romlottak. 
+          </p> 
+          <img src="./media/Képkivágás.JPG" alt="" class="scshhot"> 
+          <p>
+          A képen látható gyermek első időszakban vizsgűét eredményei a narancs és piros színnel jelölt terülteken romlottak ,míg a szürkével jelzett terülteten javulás látható.A diagrammok (vagy képességhálók) minden témakörben elérhetőek al-témakörönkénti bontásában,illetve a hét fő területet is összehasonlíthatja a két külön vizsgált időszakban. 
+          </p>
+          <div class="cimke"><span id="c2">K</span><span>imenet és tárolhatóság</span> </div>          
+          <p>  Az értékek digitális verzióinak kimeneti fájljai lehetnek PDF dokumentumok melyek a szöveges értékeléseket képesek megjeleníteni, illetve a diagramm elemeket lehet képekként is menteni.
+          Az Értékek asztali verziójánál érdemes vizsgált személyenként elmentei a vizsgálólapokat, így nem csak ott tudják folytatni munkájukat ahol abbahagyták, de évekre visszamenőleg is meg tudják nézni válaszaikat, vizsgálati eredményeiket.
+          </p>
+          <img src="./media/PDF_icon.svg.png" alt="" style="width:5%;margin:0% 1%">
+          <img src="./media/download-jpg-icon.png" alt=""style="width:5%; margin:0% 1%">
+          <p><b><i> Ossza meg vizsgálati eredményeit egyszerűen!</i></b></p>
+          <p> 
+          Ezen fajta digitális fájlok egyáltalán nem foglalnak sok helyet, kompakt méretük pedig tökéletesen alkalmasak webes továbbításra, akár egy szimpla e-mailen keresztül vagy Messenger alkalmazással.
+          </p>
+        <div class="cimke2"><span id="c3">P</span>róba verzió<span></span> </div>
+          <p> 
+          Bizonytalan megfelel e önnek az Értékek program? A „Verziók” menüpont alatt kattintson a „Demó verzió” lehetőségre. A letöltés gombra kattintva letöltheti a próbaverziót. A letöltött fájlt nyissa meg, telepítse a programot a „next” gombokra kattintva. A telepítés végeztével 24 órája van kipróbálni az Értékek asztali verzióját. Az idő letelte után a program zárolja magát. Ha ezután is szeretné igény bevenni szolgáltatásainkat keressen minket bizalommal! 
+         </p> 
+      </div>
     </section>
 
-    
     <footer>
-      Ha felkeltettük érdeklődését, vagy csak kérdése van írjon nekünek az <a href="mailto:info@ertekek.hu">info@ertekek.hu</a>-ra vagy hívjon a minket <a href="tel:+06301784272"> +36 30 1784272 </a> -es telefonszámon.
-      <p>Alkossunk értékeket!</p>
+     <img src="./media/2.png" alt="" id="face" >
+     <p> Ha felkeltettük érdeklődését, vagy csak kérdése van írjon nekünek az <a href="mailto:info@ertekek.hu">info@ertekek.hu</a>-ra vagy hívjon a minket <a href="tel:+06301784272"> +36 30 1784272 </a> -es telefonszámon.</p>
+     <img src="./media/1.png" alt="" id="tel">
+    <img src="./media/3.png" alt="" id="mail">
     </footer>
 
     <script src="./zeta.js"></script>
